# Cloud9

./: .gitignore  CMakeLists.txt  TODO
libcloud/: .sconsign.dblite  CMakeLists.txt
libcloud/2D/: CannyEstimator.cpp  CannyEstimator.h  CannyEstimator.os  Estimator.cpp  Estimator.h  FourierEstimator.cpp  FourierEstimator.h  GaussianEstimator.cpp  GaussianEstimator.h  GradientEstimator.cpp  GradientEstimator.h  HilbertEstimator.cpp  HilbertEstimator.h  HoughEstimator.cpp  HoughEstimator.h  HysteresisThresholdEstimator.cpp  HysteresisThresholdEstimator.h  Image.cpp  Image.h  ImageDrawer.cpp  ImageDrawer.h  Line.cpp  Line.h  Matrix.cpp  Matrix.h  MeanShiftEstimator.cpp  MeanShiftEstimator.h  PhaseCongruencyEstimator.cpp  PhaseCongruencyEstimator.h  RemoveDCEstimator.cpp  RemoveDCEstimator.h  ScharrEstimator.cpp  ScharrEstimator.h  SobelEstimator.cpp  SobelEstimator.h  ThresholdEstimator.cpp  ThresholdEstimator.h
libcloud/Common/: Box.cpp  Box.h  Color.cpp  Color.h  Plane.cpp  Plane.h  Point.cpp  Point.h  PointCloud.cpp  PointCloud.h  Types.h  Utils.cpp  Utils.h  Vector.cpp  Vector.h
libcloud/Features/: Feature.cpp  Feature.h  NormalEstimator.cpp  NormalEstimator.h
libcloud/Filters/: CropBoxFilter.cpp  CropBoxFilter.h  Filter.cpp  Filter.h  HoughFilter.cpp  HoughFilter.h  ScaleFilter.cpp  ScaleFilter.h  TranslateFilter.cpp  TranslateFilter.h
libcloud/IO/: FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  OBJReader.cpp  OBJReader.h  OBJWriter.cpp  OBJWriter.h  PCDReader.cpp  PCDReader.h  PCDWriter.cpp  PCDWriter.h  XYZReader.cpp  XYZReader.h  XYZWriter.cpp  XYZWriter.h
libcloud/Kdtree/: Kdtree.cpp  Kdtree.h  KdtreeNode.cpp  KdtreeNode.h
libcloud/Octree/: Octree.cpp  Octree.h  OctreeBranch.cpp  OctreeBranch.h  OctreeIterator.cpp  OctreeIterator.h  OctreeKey.cpp  OctreeKey.h  OctreeLeaf.cpp  OctreeLeaf.h  OctreeNode.cpp  OctreeNode.h
libcloud/Search/: FlannSearch.cpp  FlannSearch.h  LinearSearch.cpp  LinearSearch.h  Search.cpp  Search.h
libcloud/Slicers/: Slicer.cpp  Slicer.h  XYSlicer.cpp  XYSlicer.h
libcloud/Templates/: ExtractClusters.h  ExtractEuclideanClusters.h  ExtractHoughClusters.h  ExtractIndices.h  ExtractIndicesT.h  Filter.h  FilterIndices.h  FilterIndicesT.h  FilterT.h  Hough2D.h  LineInliers.h  LineInliersT.h  LineProjector.h  LineProjectorT.h  LinearSearchT.h  OBJReaderT.h  OBJWriterT.h  PlaneInliersT.h  Point2D.h  Point3D.h  PointCloudT.h  ProjectInliersT.h  Projector.h  ProjectorT.h  SearchT.h  SlicerT.h  Types.h  XYSlicerT.h  XZSlicerT.h  YZSlicerT.h
libcloud2/: CMakeLists.txt  example.i
libcloud2/Common/: Interval.cpp  Interval.h  ModelCoefficients.h  PointCloud.cpp  PointCloud.h  PointCloud3D.cpp  PointCloud3D.h  Range.cpp  Range.h  Timer.cpp  Timer.h  Types.h
libcloud2/Filtering/: ExtractIndices.cpp  ExtractIndices.h  Filter.cpp  Filter.h  FilterIndices.cpp  FilterIndices.h  PassThrough.h
libcloud2/Geometry/: BoundingBox3D.cpp  BoundingBox3D.h  Box2D.cpp  Box2D.h  Box3D.cpp  Box3D.h  Line2D.cpp  Line2D.h  Point.cpp  Point.h  Point2D.cpp  Point2D.h  Point3D.cpp  Point3D.h  Vector2D.cpp  Vector2D.h  Vector3D.cpp  Vector3D.h
libcloud2/Hough/: Accumulator.cpp  Accumulator.h  Accumulator2D.cpp  Accumulator2D.h  AccumulatorCell.cpp  AccumulatorCell.h  AccumulatorVote.cpp  AccumulatorVote.h  HoughTransform.cpp  HoughTransform.h  HoughTransform2D.cpp  HoughTransform2D.h  HoughTransform3D.cpp  HoughTransform3D.h
libcloud2/IO/: OBJReader.cpp  OBJReader.h  PLYReader.cpp  PLYReader.h  Reader.cpp  Reader.h
libcloudui/: Anchor.cpp  Anchor.h  CMakeLists.txt  CloudWindow.cpp  CloudWindow.h  Edge.cpp  Edge.h  GLWidget.cpp  GLWidget.h  Graph.cpp  Graph.h  ImageViewer.cpp  ImageViewer.h  Node.cpp  Node.h
libcloudui/Actors/: Actor.cpp  Actor.h  AxisActor.cpp  AxisActor.h  BoxActor.cpp  BoxActor.h  LineActor.cpp  LineActor.h  OctreeActor.cpp  OctreeActor.h  PlaneActor.cpp  PlaneActor.h  PointCloudActor.cpp  PointCloudActor.h
libcloudui/CloudApplication/: CloudApplication.cpp  CloudApplication.h
libcloudui/GraphEditor/: Anchor.cpp  Anchor.h  Edge.cpp  Edge.h  EstimatorThread.h  GaussianNode.cpp  GaussianNode.h  Graph.cpp  Graph.h  GraphEditorWidget.cpp  GraphEditorWidget.h  GraphToolBar.cpp  GraphToolBar.h  ImageNode.cpp  ImageNode.h  ImageReaderNode.cpp  ImageReaderNode.h  ImageReaderThread.cpp  ImageReaderThread.h  InputAnchor.cpp  InputAnchor.h  IntegerProperty.cpp  IntegerProperty.h  MetaTypes.h  Node.cpp  Node.h  NodeThread.cpp  NodeThread.h  NullThread.cpp  NullThread.h  OutputAnchor.cpp  OutputAnchor.h  PathProperty.cpp  PathProperty.h  Property.cpp  Property.h  RealProperty.cpp  RealProperty.h  SobelNode.cpp  SobelNode.h  (+6 more)
libcloudui/Nodes/: CannyNode.cpp  CannyNode.h  GaussianNode.cpp  GaussianNode.h  HoughNode.cpp  HoughNode.h  ImageNode.cpp  ImageNode.h  ImageReaderNode.cpp  ImageReaderNode.h  ImageWriterNode.cpp  ImageWriterNode.h  MeanShiftNode.cpp  MeanShiftNode.h  PhaseCongruencyNode.cpp  PhaseCongruencyNode.h  PointCloudReaderNode.cpp  PointCloudReaderNode.h  SobelNode.h  TestNode.cpp  TestNode.h  ThresholdNode.cpp  ThresholdNode.h  ViewerNode.cpp  ViewerNode.h
libsvg/: CMakeLists.txt  Circle.cpp  Circle.h  Document.cpp  Document.h  Element.cpp  Element.h  Length.cpp  Length.h  Line.cpp  Line.h  Node.cpp  Node.h  Polyline.cpp  Polyline.h  SVGElement.cpp  SVGElement.h  Shape.cpp  Shape.h  Text.h  TextContent.cpp  TextContent.h  TextPositioning.cpp  TextPositioning.h  Types.h  XMLElement.cpp  XMLElement.h  XMLNode.cpp  XMLNode.h
libxml/: Attr.cpp  Attr.h  CMakeLists.txt  DOMImplementation.cpp  DOMImplementation.h  Document.cpp  Document.h  DocumentType.cpp  DocumentType.h  Element.cpp  Element.h  NamedNodeMap.cpp  NamedNodeMap.h  Node.cpp  Node.h  NodeList.cpp  NodeList.h
src/: CMakeLists.txt
test/: CMakeLists.txt  CropBoxFilter_test.cpp  EuclideanClusters_test.cpp  FourierEstimator_test.cpp  GaussianEstimator_test.cpp  Hough2D_test.cpp  Kdtree_test.cpp  LineProjector_test.cpp  Line_test.cpp  Matrix_test.cpp  Plane_test.cpp  Point_test.cpp  Range_test.cpp  Search_test.cpp  Types_test.cpp  Vector_test.cpp
(+65 files in other folders)
