find_package (GTest REQUIRED)

include_directories (${GTEST_INCLUDE_DIRS})

add_executable (CropBoxFilterTest CropBoxFilter_test.cpp)
add_executable (EuclideanClustersTest EuclideanClusters_test.cpp)
add_executable (FourierEstimatorTest FourierEstimator_test.cpp)
add_executable (GaussianEstimatorTest GaussianEstimator_test.cpp)
add_executable (KdtreeTest Kdtree_test.cpp)
add_executable (LineTest Line_test.cpp)
add_executable (MatrixTest Matrix_test.cpp)
add_executable (PlaneTest Plane_test.cpp)
add_executable (PointTest Point_test.cpp)
add_executable (SearchTest Search_test.cpp)
add_executable (TypesTest Types_test.cpp)
add_executable (VectorTest Vector_test.cpp)

target_link_libraries (CropBoxFilterTest ${GTEST_BOTH_LIBRARIES} cloud)
target_link_libraries (EuclideanClustersTest ${GTEST_BOTH_LIBRARIES} cloud)
target_link_libraries (FourierEstimatorTest ${GTEST_BOTH_LIBRARIES} cloud)
target_link_libraries (GaussianEstimatorTest ${GTEST_BOTH_LIBRARIES} cloud)
target_link_libraries (KdtreeTest ${GTEST_BOTH_LIBRARIES} cloud)
target_link_libraries (LineTest ${GTEST_BOTH_LIBRARIES} cloud)
target_link_libraries (MatrixTest ${GTEST_BOTH_LIBRARIES} cloud)
target_link_libraries (PlaneTest ${GTEST_BOTH_LIBRARIES} cloud)
target_link_libraries (PointTest ${GTEST_BOTH_LIBRARIES} cloud)
target_link_libraries (TypesTest ${GTEST_BOTH_LIBRARIES} cloud)
target_link_libraries (SearchTest ${GTEST_BOTH_LIBRARIES} cloud)
target_link_libraries (VectorTest ${GTEST_BOTH_LIBRARIES} cloud)

add_test (CropBoxFilter CropBoxFilterTest)
add_test (EuclideanClusters EuclideanClustersTest)
add_test (FourierEstimator FourierEstimatorTest)
add_test (GaussianEstimator GaussianEstimatorTest)
add_test (Kdtree KdtreeTest)
add_test (Line LineTest)
add_test (Matrix MatrixTest)
add_test (Plane PlaneTest)
add_test (Point PointTest)
add_test (Search SearchTest)
add_test (Types TypesTest)
add_test (Vector VectorTest)